using zulu image

--- a/base-image/Dockerfile
+++ b/base-image/Dockerfile
@@ -2,13 +2,29 @@ FROM centos:7
 
 WORKDIR /opt
 
-RUN yum install -y wget curl
-RUN curl -O https://cdn.azul.com/zulu/bin/zulu-repo-1.0.0-1.noarch.rpm
-RUN sudo rpm --import https://www.azul.com/wp-content/uploads/2021/05/0xB1998361219BD9C9.txt
-RUN sudo zypper install zulu-repo-1.0.0-1.noarch.rpm
-RUN sudo zypper install zulu11-jdk
+#
+# UTF-8 by default
+#
+ENV LANG='en_US.UTF-8' LANGUAGE='en_US:en' LC_ALL='en_US.UTF-8'
 
-RUN export JAVA_HOME = "/usr/lib/jvm/zulu11"
+#
+# Pull Zulu OpenJDK binaries from official repository:
+#
+
+ARG ZULU_REPO_VER=1.0.0-1
+
+RUN rpm --import http://repos.azulsystems.com/RPM-GPG-KEY-azulsystems && \
+    curl -sLO https://cdn.azul.com/zulu/bin/zulu-repo-${ZULU_REPO_VER}.noarch.rpm && \
+    rpm -ivh zulu-repo-${ZULU_REPO_VER}.noarch.rpm && \
+    yum -q -y update && \
+    yum -q -y upgrade && \
+    yum -q -y install yum-plugin-versionlock tzdata && \
+    yum versionlock zulu11-*-11.0.17-* && \
+    yum -q -y install zulu11-jdk && \
+    yum clean all && \
+    rm -rf /var/cache/yum zulu-repo_${ZULU_REPO_VER}.noarch.rpm
+
+ENV JAVA_HOME=/usr/lib/jvm/zulu11
 RUN export PATH=${PATH}:${JAVA_HOME}/bin
 
 RUN sudo yum install maven
