--- a/base-image/Dockerfile
+++ b/base-image/Dockerfile
@@ -27,7 +27,34 @@ RUN rpm --import http://repos.azulsystems.com/RPM-GPG-KEY-azulsystems && \
 ENV JAVA_HOME=/usr/lib/jvm/zulu11
 RUN export PATH=${PATH}:${JAVA_HOME}/bin
 
-RUN sudo yum install maven
+# Setting Maven Version that needs to be installed
+ARG MAVEN_VERSION=3.5.4
+
+# Changing user to root to install maven
+USER root
+
+# Install required tools
+# which: otherwise 'mvn version' prints '/usr/share/maven/bin/mvn: line 93: which: command not found'
+RUN yum update -y && \
+  yum install -y which && \
+  yum clean all
+
+# Maven
+RUN curl -fsSL https://archive.apache.org/dist/maven/maven-3/$MAVEN_VERSION/binaries/apache-maven-$MAVEN_VERSION-bin.tar.gz | tar xzf - -C /usr/share \
+  && mv /usr/share/apache-maven-$MAVEN_VERSION /usr/share/maven \
+  && ln -s /usr/share/maven/bin/mvn /usr/bin/mvn
+
+ENV MAVEN_VERSION=${MAVEN_VERSION}
+ENV M2_HOME /usr/share/maven
+ENV maven.home $M2_HOME
+ENV M2 $M2_HOME/bin
+ENV PATH $M2:$PATH
+
+# Again using non-root user i.e. stakater as set in base image
+USER 10001
+
+# Define default command, can be overriden by passing an argument when running the container
+CMD ["mvn","-version"]
 
 
 
